@@ -64,7 +64,7 @@ public class ConsistentHashExecutorRouter implements ExecutorRouter {
     @Override
     public Response<String> route(TriggerParam triggerParam, List<String> addressList) {
         if (addressList.size() == 1) {
-            return Response.success(addressList.get(0));
+            return Response.success(addressList.getFirst());
         }
 
         String address = hashJob(triggerParam.getJobId(), addressList);
