@@ -13,6 +13,6 @@ public class FirstExecutorRouter implements ExecutorRouter {
 
     @Override
     public Response<String> route(TriggerParam triggerParam, List<String> addressList) {
-        return Response.success(addressList.get(0));
+        return Response.success(addressList.getFirst());
     }
 }
